// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScript code generation #generateSource() should correctly add typename to nested fragments on interfaces if addTypename is true 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroQueryQueryVariables {
  episode: Episode | null;
}

export interface HeroQueryQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {
      // A list of the friends, as a convenience when edges are not needed.
      friends: Array<CharacterFragmentFragment>,
    },
  } | null;
}

export interface CharacterFragmentFragmentOnHuman {
  __typename: \\"Human\\";
  // What this human calls themselves
  name: string;
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
}

export interface CharacterFragmentFragmentOnDroid {
  __typename: \\"Droid\\";
  // What others call this droid
  name: string;
  // This droid's primary function
  primaryFunction: string | null;
}

export type CharacterFragmentFragment =
  | CharacterFragmentFragmentOnHuman
  | CharacterFragmentFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should correctly handle doubly nested fragments on interfaces 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroQueryQueryVariables {
  episode: Episode | null;
}

export interface HeroQueryQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {
      // A list of the friends, as a convenience when edges are not needed.
      friends: Array<CharacterFragmentFragment>,
    },
  } | null;
}

export interface CharacterFragmentFragmentOnHuman {
  // What this human calls themselves
  name: string;
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
  // This human's friends, or an empty list if they have none
  friends: Array<OtherCharacterFragmentFragment>;
}

export interface CharacterFragmentFragmentOnDroid {
  // What others call this droid
  name: string;
  // This droid's primary function
  primaryFunction: string | null;
}

export type CharacterFragmentFragment =
  | CharacterFragmentFragmentOnHuman
  | CharacterFragmentFragmentOnDroid

export interface OtherCharacterFragmentFragmentOnHuman {
  // Height in the preferred unit, default is meters
  height: number | null;
}

export interface OtherCharacterFragmentFragmentOnDroid {
  // The movies this droid appears in
  appearsIn: Array< Episode | null >;
}

export type OtherCharacterFragmentFragment =
  | OtherCharacterFragmentFragmentOnHuman
  | OtherCharacterFragmentFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should correctly handle fragments on interfaces 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroQueryQueryVariables {
  episode: Episode | null;
}

export interface HeroQueryQuery {
  hero: HeroFragment | null;
}

export interface HeroFragmentOnHuman {
  // What this human calls themselves
  name: string;
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
}

export interface HeroFragmentOnDroid {
  // What others call this droid
  name: string;
  // This droid's primary function
  primaryFunction: string | null;
}

export type HeroFragment =
  | HeroFragmentOnHuman
  | HeroFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should correctly handle nested fragments on interfaces 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroQueryQueryVariables {
  episode: Episode | null;
}

export interface HeroQueryQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {
      // A list of the friends, as a convenience when edges are not needed.
      friends: Array<CharacterFragmentFragment>,
    },
  } | null;
}

export interface CharacterFragmentFragmentOnHuman {
  __typename: \\"Human\\";
  // What this human calls themselves
  name: string;
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
}

export interface CharacterFragmentFragmentOnDroid {
  __typename: \\"Droid\\";
  // What others call this droid
  name: string;
  // This droid's primary function
  primaryFunction: string | null;
}

export type CharacterFragmentFragment =
  | CharacterFragmentFragmentOnHuman
  | CharacterFragmentFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate correct typedefs with a multiple custom fragments 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQueryVariables {
  episode: Episode | null;
}

export interface HeroAndFriendsNamesQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: Array<FriendFragment & PersonFragment>,
  } | null;
}

export interface FriendFragment {
  // The name of the character
  name: string;
}

export interface PersonFragment {
  // The name of the character
  name: string;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate correct typedefs with a single custom fragment 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQueryVariables {
  episode: Episode | null;
}

export interface HeroAndFriendsNamesQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: Array<FriendFragment>,
  } | null;
}

export interface FriendFragment {
  // The name of the character
  name: string;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate fragmented query operations 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

export interface HeroAndFriendsNamesQuery {
  hero: HeroFriendsFragment & {
    // The name of the character
    name: string,
  } | null;
}

export interface HeroFriendsFragment {
  // The friends of the character, or an empty list if they have none
  friends: Array< {
    // The name of the character
    name: string,
  } > | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface ReviewInput {
  // 0-5 stars
  stars: number;
  // Comment about the movie, optional
  commentary: string | null;
  // Favorite color, optional
  favorite_color: ColorInput | null;
}

export interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

export interface ReviewMovieMutationVariables {
  episode: Episode | null;
  review: ReviewInput | null;
}

export interface ReviewMovieMutation {
  createReview: {
    // The number of stars this review gave, 1-5
    stars: number,
    // Comment about the movie
    commentary: string | null,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate query operations with inline fragments 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

export interface HeroAndDetailsQuery {
  hero: HeroDetailsFragment & {
    // The name of the character
    name: string,
  } | null;
}

export interface HeroDetailsFragmentOnDroid {
  // This droid's primary function
  primaryFunction: string | null;
}

export interface HeroDetailsFragmentOnHuman {
  // Height in the preferred unit, default is meters
  height: number | null;
}

export type HeroDetailsFragment =
  | HeroDetailsFragmentOnDroid
  | HeroDetailsFragmentOnHuman
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQueryVariables {
  episode: Episode | null;
}

export interface HeroAndFriendsNamesQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: Array< {
      // The name of the character
      name: string,
    } > | null,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

export interface HeroNameQuery {
  hero: {
    // The name of the character
    name: string,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations including input variables 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroNameQueryVariables {
  episode: Episode | null;
}

export interface HeroNameQuery {
  hero: {
    // The name of the character
    name: string,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should handle complex fragments with type aliases 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQuery {
  hero: SomethingFragment & {
    // The name of the character
    name: string,
  } | null;
  empireHero: SomethingFragment & {
    // The name of the character
    name: string,
  } | null;
}

export interface SomethingFragmentOnHuman {
  // This human's friends, or an empty list if they have none
  friends: Array< FriendFragment | null > | null;
}

export interface FriendFragmentOnHuman {
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
}

export interface FriendFragmentOnDroid {
  // This droid's primary function
  primaryFunction: string | null;
}

export type FriendFragment =
  | FriendFragmentOnHuman
  | FriendFragmentOnDroid

export interface SomethingFragmentOnDroid {
  // The movies this droid appears in
  appearsIn: Array< Episode | null >;
}

export type SomethingFragment =
  | SomethingFragmentOnHuman
  | SomethingFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should handle multi-fragmented query operations 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQuery {
  hero: HeroFriendsFragment & HeroAppearsFragment & {
    // The name of the character
    name: string,
  } | null;
}

export interface HeroFriendsFragment {
  // The friends of the character, or an empty list if they have none
  friends: Array< {
    // The name of the character
    name: string,
  } > | null;
}

export interface HeroAppearsFragment {
  // The movies this character appears in
  appearsIn: Array< Episode | null >;
}
/* tslint:enable */
"
`;
